ahmad-ilyas/docker-learning/modules/network/resources.tf

#public subnets
resource "aws_subnet" "public1" {
  depends_on        = [module.vpc]
  vpc_id            = module.vpc.vpc_id
  cidr_block        = "10.100.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "upgrad-public-1"
  }
}
resource "aws_subnet" "public2" {
  depends_on        = [module.vpc]
  vpc_id            = module.vpc.vpc_id
  cidr_block        = "10.100.2.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name = "upgrad-public-2"
  }
}

#private subnets
resource "aws_subnet" "private1" {
  depends_on        = [module.vpc]
  vpc_id            = module.vpc.vpc_id
  cidr_block        = "10.100.3.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "upgrad-private-1"
  }
}
resource "aws_subnet" "private2" {
  depends_on        = [module.vpc]
  vpc_id            = module.vpc.vpc_id
  cidr_block        = "10.100.4.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name = "upgrad-private-2"
  }
}

# elastic ip
resource "aws_eip" "eip" {
  depends_on = [module.vpc]
  domain     = "vpc"
}

# nat gateway
resource "aws_nat_gateway" "nat" {
  depends_on    = [module.vpc]
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.public1.id

  tags = {
    Name = "this-nat"
  }
}

#public route table
resource "aws_route_table" "public" {
  depends_on = [module.vpc]
  vpc_id     = module.vpc.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = module.vpc.igw_id
  }

  tags = {
    Name = "public-rt"
  }
}

#private route table
resource "aws_route_table" "private" {
  depends_on = [module.vpc]
  vpc_id     = module.vpc.vpc_id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "private-rt"
  }
}

# table associations
resource "aws_route_table_association" "public1" {
  depends_on     = [module.vpc]
  subnet_id      = aws_subnet.public1.id
  route_table_id = aws_route_table.public.id
}
resource "aws_route_table_association" "public2" {
  depends_on     = [module.vpc]
  subnet_id      = aws_subnet.public2.id
  route_table_id = aws_route_table.public.id
}
resource "aws_route_table_association" "private1" {
  depends_on     = [module.vpc]
  subnet_id      = aws_subnet.private1.id
  route_table_id = aws_route_table.private.id
}
resource "aws_route_table_association" "private2" {
  depends_on     = [module.vpc]
  subnet_id      = aws_subnet.private2.id
  route_table_id = aws_route_table.private.id
}

# security group
resource "aws_security_group" "allow_ssh" {
  depends_on  = [module.vpc]
  name        = "allow_ssh"
  description = "Allow SSH inbound traffic"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTP"
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Testing Http"
    protocol    = "tcp"
    from_port   = 8080
    to_port     = 8080
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "service healty"
    protocol    = "tcp"
    from_port   = 8081
    to_port     = 8081
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_ssh"
  }
}

# security group for rds
resource "aws_security_group" "rds_security_group" {
  depends_on  = [module.vpc]
  name        = "rds-security-group"
  description = "Security group for rds instance"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "Allow mysql"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["10.100.0.0/16"]
  }

  tags = {
    Name = "allow_mysql"
  }
}

# rds subnet
resource "aws_db_subnet_group" "rds_subnet_group" {
  depends_on = [module.vpc]
  name       = "rds-subnet-group"
  subnet_ids = [aws_subnet.private1.id, aws_subnet.private2.id]
}
